Remove sbt-cross-build plugin since it's not doing anything but does not let this because an AutoPlugin.