@@ -23,15 +23,3 @@ credentials += Credentials("Sonatype Nexus Repository Manager", "nexus.gilt.com"
 licenses += ("MIT", url("http://opensource.org/licenses/MIT"))
 
 scalacOptions += "-deprecation"
-
-crossBuildingSettings
-
-CrossBuilding.crossSbtVersions := Seq("0.13")
-
-CrossBuilding.scriptedSettings
-
-scriptedLaunchOpts <<= (scriptedLaunchOpts, version) { case (s,v) => s ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + v)
-}
-
-scriptedBufferLog := false
